# yubaoCTrader

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
examples/: download_tick_data.py  download_tick_data_private.py  filter_pcap.py
yubaoCtrader/app/cta_strategy/: __init__.py  backtesting.py  base.py  engine.py  template.py  tools.py
yubaoCtrader/app/portfolio_strategy/: __init__.py  backtesting.py  base.py  engine.py  template.py  utility.py
yubaoCtrader/cta_strategy/: __init__.py  backtesting.py  base.py  engine.py  template.py
yubaoCtrader/ctp_gateway/: __init__.py
yubaoCtrader/ctp_gateway/gateway/: ctp_gateway.py
yubaoCtrader/dolphindb/: __init__.py  dolphindb_database.py  dolphindb_script.py
yubaoCtrader/event/: engine.py
yubaoCtrader/postgresql/: __init__.py  postgresql_database.py
yubaoCtrader/rqdata/: __init__.py  rqdata_datafeed.py  rqdata_gateway.py
yubaoCtrader/sqlitedb/: __init__.py  sqlite_database.py
yubaoCtrader/tdengine/: __init__.py  taos_database.py
yubaoCtrader/tora_gateway/: __init__.py
yubaoCtrader/tora_gateway/api/vntora/vntoraoption/: vntoraoption.cpp
yubaoCtrader/tora_gateway/api/vntora/vntorastock/: vntorastock.cpp
yubaoCtrader/tora_gateway/gateway/: terminal_info_linux.py  terminal_info_windows.py  tora_option_gateway.py  tora_stock_gateway.py
yubaoCtrader/trader/: constant.py  database.py  datafeed.py  engine.py  event.py  gateway.py  object.py  setting.py  utility.py
yubaoCtrader/trader/dbconnectors/: __init__.py  mysql_database.py
