[metadata]
name = yubaoCtrader
version = 1.1.0
url = https://github.com/BaoChunhui/yubaoCTrader/
license = MIT
author = yubao
author_email = baochunhui1996@gmail.com
description = A framework for developing quant trading systems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires =
    importlib_metadata
    wmi
    requests

[options.package_data]
* = *.dll, *.so, *.pyd, *.lib
